# matplotlib_inline_labels

./: .gitignore  LICENSE  NEWS.md  README.md  inline_labels_with_debug_option_with_vectorized_pygeos_only.py  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: publish-to-test-pypi.yml  pytest.yml
docs/: add_inline_labels_overview_graph.drawio
examples/: example.py
inline_labels/: __init__.py  drawing.py  geometries.py  inline_labels.py  inlining.py  postprocessing.py  preprocessing.py  processing.py
matplotlib_inline_labels/: __init__.py
src/: __init__.py  datatypes.py  drawing.py  geometries.py  inline_labels.py  inlined_label.py  postprocessing.py  preprocessing.py  processing.py  selfseparation.py  utils.py
src/matplotlib_inline_labels/: __init__.py  drawing.py  utils.py
tests/: test.py  vdbg.prof  visual_unitary_test_01.py  visual_unitary_tests.ipy  visual_unitary_tests.py
tests/local_results/: fig_comparison_basic.html
