[build-system]
requires = ["flit_core >=3.8,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "matplotlib_inline_labels"
version = "0.1.0"
authors = [
  { name="mathieu17g", email="mathieu19g@icloud.com" },
]
description = "Inline line labels for matplotlib with automatic positionning"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Framework :: Matplotlib",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
]
dependencies = [
  "matplotlib",
  "nptyping",
  "numpy",
  "Shapely",
  "tqdm",
]

[project.urls]
"Homepage" = "https://github.com/mathieu17g/matplotlib_inline_labels"
"Bug Tracker" = "https://github.com/mathieu17g/matplotlib_inline_labels/issues"

[project.optional.dependencies]
test = [
  "pytest",
  "pytest-cov",
  "pytest-mpl",
  "scipy",
]

[tool.flit.module]
name = "inlinelabels"

[tool.black]
line-length = 125

[tool.coverage.run]
branch = true

[tool.coverage.report]
fail_under = 90

[tool.pytest.ini_options]
python_files = "test*.py"
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
    ]
pythonpath = "src"
addopts = "--mpl"