[build-system]
requires = ["flit_core >=3.8,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "matplotlib_inline_labels"
version = "0.1.6"
authors = [{name = "mathieu17g", email = "mathieu19g@icloud.com"}]
description = "Inline line labels for matplotlib with automatic positionning"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Framework :: Matplotlib",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
]
dependencies = [
  "matplotlib>=3.8",
  "nptyping>=2.5",
  "numpy>=1.26",
  "Shapely>=2.0",
  "tqdm>=4.66",
]

[project.optional-dependencies]
test = [
  "pytest>=7.4",
  "pytest-cov>=4.1",
  "pytest-mpl>=0.16",
  "scipy>=1.11",
]

[project.urls]
"Homepage" = "https://github.com/mathieu17g/matplotlib_inline_labels"
"Bug Tracker" = "https://github.com/mathieu17g/matplotlib_inline_labels/issues"

[tool.flit.module]
name = "inline_labels"

[tool.pyright]
include = ["src"]

[tool.black]
line-length = 125

[tool.ruff]
line-length = 125

[tool.coverage.run]
branch = true
source = ["src",]
omit = ["__init__.py",]

[tool.coverage.report]
fail_under = 85

[tool.pytest.ini_options]
python_files = "test*.py"
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
    ]
pythonpath = "src"
testpaths = ["tests",]
addopts = "--color=yes --mpl --cov --cov-report=xml -rxXs"